--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "peerjs-audio-connect",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
+    "request": "^2.88.2",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
@@ -46,6 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-transition": "^2.1.0"
+    "@types/react-router-dom": "^5.1.7"
   }
 }
