--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-scripts": "4.0.3",
     "request": "^2.88.2",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "scripts": {
     "start": "react-scripts start",
