--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "react-scripts": "4.0.3",
     "request": "^2.88.2",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -49,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
