--- a/package.json
+++ b/package.json
@@ -47,8 +47,6 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12"
+    "@types/react-router-dom": "^5.1.7"
   }
 }
