--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.3",
+    "react-use-clipboard": "^1.0.7",
     "request": "^2.88.2",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
