--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^4.1.2",
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
@@ -48,6 +49,9 @@
     ]
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
+    "@types/bcrypt-nodejs": "0.0.31",
+    "@types/bcryptjs": "^2.4.2",
     "@types/react-router-dom": "^5.1.7"
   }
 }
