--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^12.20.7",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "bcryptjs": "^2.4.3",
     "framer-motion": "^4.1.2",
     "peerjs": "^1.3.2",
     "react": "^17.0.2",
@@ -49,9 +44,10 @@
     ]
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.1",
-    "@types/bcrypt-nodejs": "0.0.31",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/react-router-dom": "^5.1.7"
+    "@types/react-router-dom": "^5.1.7",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^12.20.7",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3"
   }
 }
